k8s/class-code/lecture4-ingress/k8s/api-b/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-b
  namespace: jeff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-b
  template:
    metadata:
      labels:
        app: api-b
    spec:
      containers:
      - name: api-b
        image: api-b:v1
        ports:
        - containerPort: 3000
