k8s/class-code/lecture4-ingress/k8s/api-b/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-b-svc
spec:
  selector:
    app: api-b
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
