k8s/class-code/lecture4-ingress/k8s/api-b/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-b
  labels:
    app.kubernetes.io/name: api-b
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
spec:
  tls:
  - hosts:
    - hodi.local
    secretName: tls-secrets
  rules:
  - host: hodi.local
    http:
      paths:
      - pathType: Prefix
        path: /api-b(/|$)(.*)
        backend:
          service:
            name: api-b-svc
            port: 
              number: 3000
